test/files/neg/classtags_dont_use_typetags.check
classtags_dont_use_typetags.scala:4: error: No ClassTag available for T
  def foo[T: TypeTag] = Array[T]()
                                ^
one error found
